<resources>
    <string name="app_name">Reviewer</string>
    <string name="rec_page_btn_text">Recommendations</string>
    <string name="user_profile_btn_text">User Profile</string>
    <string name="game_info_page_btn_text">Game Info</string>
    <string name="review_button">Review Game</string>
    <string name="admin_add_game_btn_text">ADMIN: Add game to db</string>
    <string name="preview_button">Preview</string>
    <string name="submit_button">Submit</string>
    <string name="exit_button">Exit</string>
    <string name="game_title">Super Mario Bros</string>
    <string name="one_star">One Star Rating</string>
    <string name="two_star">Two Star Rating</string>
    <string name="three_star">Three Star Rating</string>
    <string name="four_star">Four Star Rating</string>
    <string name="five_star">Five Star Rating</string>
    <string name="action_settings">Settings</string>
    <string name="game_summary_placeholder">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
    </string>
    <string name="game_title_text_placeholder">SUPER COOL GAME</string>
    <string name="test_game_name_1">Destiny 2</string>
    <string name="test_game_name_2">Runescape</string>
    <string name="test_game_name_3">Death Stranding</string>
    <string name="test_game_name_4">Cyberpunk 2077</string>
    <string name="test_game_name_5">Final Fantasy XIV: Shadowbringers</string>
    <string name="test_game_name_6">Borderlands 3</string>
    <string name="test_game_name_7">The Witcher 3: Wild Hunt</string>
    <string name="test_game_name_8">Tom Clancy\'s Rainbow Six Siege</string>
    <string name="test_game_name_9">Sekiro: Shadows Die Twice</string>
    <string name="test_game_name_10">RUINER</string>
    <string name="test_game_desc_1">ERIS MORN RETURNS
As the heroes of the last safe city turn their attention to the far-reaching frontiers of our galaxy, new Nightmares have emerged from an ancient evil that once slumbered beneath the Lunar surface.

        CONQUER YOUR FEARS
Return to the Moon. Journey deep into a mysterious Hive Keep. Work with Eris to slay the Nightmares before they cast humanity into an age of darkness for good.

        RISE TO NEW HEIGHTS
Fight, earn, and infuse to reach the new Power cap of 960. Level up your Seasonal Artifact and exceed the Power limit of your weapons and armor to overcome impossible challenges.

    INTRODUCING FINISHERS
AVAILABLE TO ALL DESTINY 2 PLAYERS
        CLASS THEMED
Blast arcane energy as a Warlock, flourish your knives as a Hunter, and strike with the greatest Titan weapon of all, your fist.
        CLOSE QUARTERS COMBAT
Rush a weakened enemy to activate a devastating final blow.
        RISK &amp; REWARD
Equip Finisher Mods that use Super energy to customize its effects, such as self-healing or spawning ammo for your fireteam.

        HUNT FOR ALL NEW GEAR
Discover unique weapons and armor in ways both new and old - construct weapons out of Nightmare Essence with Eris Morn, gather Vex-themed gear through the Season Pass, and collect exciting new Exotics from quests and enemy drops.

        GARDEN OF SALVATION
A signal emerges from the dark and reaches beyond dimensions, into the uncharted wilds of the Black Garden. Where it leads inside the Garden remains a mystery. One that whispers with temptation, yearning to be solved.

        SEASON OF THE UNDYING
        Defend our Moon from the Vex invasion and face the Undying Mind. In Season of the Undying, you will experience a new activity, discover new exotic weapons, collect exclusive universal ornaments, and grow more powerful.
    </string>
    <string name="test_game_desc_2">A unique MMO set in the vast, fantasy world of Gielinor, brimming with diverse races, guilds and ancient gods battling for dominion. RuneScape now features more ways to play, brand new skills and over 200 gripping story-driven quests.</string>
    <string name="test_game_desc_3">Tomorrow Is In Your Hands
After the collapse of civilization, Sam Bridges must journey across a ravaged landscape crawling with otherworldly threats to save mankind from the brink of extinction. From legendary game creator Hideo Kojima comes an all-new, genre-defying experience for the PlayStation®4 system.

Starring Norman Reedus, Mads Mikkelsen, Léa Seydoux, and Lindsay Wagner.</string>
    <string name="test_game_desc_4">Cyberpunk 2077 is an open-world, action-adventure story set in Night City, a megalopolis
obsessed with power, glamour and body modification. You play as V, a mercenary outlaw going after a one-of-a-kind implant that is the key to immortality. You can customize your character’s cyberware, skillset and playstyle, and explore a vast city where the choices you make shape the story and the world around you.</string>
    <string name="test_game_desc_5">Take part in the next saga of the critically acclaimed FINAL FANTASY® XIV Online with the next legendary expansion pack—SHADOWBRINGERS!

        Explore breathtaking new environments, encounter exotic new races, master exciting new jobs, and fight alongside prominent characters with the new Trust system as you embark on a new journey as the Warrior of Darkness!

        With over 16 million adventurers worldwide, join the next chapter and become what you must. Become the Warrior of Darkness!
</string>
    <string name="test_game_desc_6">WELCOME TO BORDERLANDS 3
At the hard edge of the galaxy lies a group of planets ruthlessly exploited by militarized corporations. Brimming with loot and violence, this is your home—the Borderlands. Now, a crazed cult known as The Children of the Vault has emerged and is spreading like an interstellar plague. Play solo or co-op as one of four unique Vault Hunters, score loads of loot, and save the galaxy from this fanatical threat.</string>
    <string name="test_game_desc_7">The Witcher: Wild Hunt is a story-driven open world RPG set in a visually stunning fantasy universe full of meaningful choices and impactful consequences. In The Witcher, you play as professional monster hunter Geralt of Rivia tasked with finding a child of prophecy in a vast open world rich with merchant cities, pirate islands, dangerous mountain passes, and forgotten caverns to explore.</string>
    <string name="test_game_desc_8">Master the art of destruction and gadgetry in Tom Clancy’s Rainbow Six Siege. Face intense close quarters combat, high lethality, tactical decision making, team play and explosive action within every moment. Experience a new era of fierce firefights and expert strategy born from the rich legacy of past Tom Clancy\'s Rainbow Six games.</string>
    <string name="test_game_desc_9">With over 50 awards and nominations, Sekiro: Shadows Die Twice is the next adventure from developer FromSoftware, creators of Bloodborne and the Dark Souls series. Carve your own clever path to vengeance in this all-new action-adventure title.

In Sekiro: Shadows Die Twice you are the "one-armed wolf", a disgraced and disfigured warrior rescued from the brink of death. Bound to protect a young lord who is the descendant of an ancient bloodline, you become the target of many vicious enemies, including the dangerous Ashina clan. When the young lord is captured, nothing will stop you on a perilous quest to regain your honor, not even death itself.

Explore late 1500s Sengoku Japan, a brutal period of constant life and death conflict, as you come face to face with larger than life foes in a dark and twisted world. Unleash an arsenal of deadly prosthetic tools and powerful ninja abilities while you blend stealth, vertical traversal, and visceral head to head combat in a bloody confrontation.

Take Revenge. Restore your honor. Kill Ingeniously.</string>
    <string name="test_game_desc_10">RUINER is a brutal action shooter set in the year 2091 in the cyber metropolis Rengkok. A wired psychopath lashes out against a corrupt system to uncover the truth and retrieve his kidnapped brother under the guidance of a secretive hacker friend. Combine preternatural reflexes, augmented tools, and the arsenal of fallen foes to tear down and dismantle the corporate titans of virtuality dealers at HEAVEN.</string>
</resources>