<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:text="@string/game_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/review_text"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="124dp"
        android:background="@null"
        android:gravity="top|start"
        android:hint="Write Review Here"
        android:textSize="20sp"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="@android:integer/config_longAnimTime"
        android:maxLength="1000"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_title_text" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <ImageButton
        android:id="@+id/one_star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/one_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:srcCompat="@android:drawable/btn_star" />

    <ImageButton
        android:id="@+id/two_star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/two_star"
        app:layout_constraintStart_toEndOf="@+id/one_star_button"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:srcCompat="@android:drawable/btn_star" />

    <ImageButton
        android:id="@+id/three_star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/three_star"
        app:layout_constraintStart_toEndOf="@+id/two_star_button"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:srcCompat="@android:drawable/btn_star" />

    <ImageButton
        android:id="@+id/four_star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/four_star"
        app:layout_constraintStart_toEndOf="@+id/three_star_button"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:srcCompat="@android:drawable/btn_star" />

    <ImageButton
        android:id="@+id/five_star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/five_star"
        app:layout_constraintStart_toEndOf="@+id/four_star_button"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/rating_display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/five_star_button"
        app:layout_constraintTop_toBottomOf="@+id/exit_button"
        app:layout_constraintBottom_toBottomOf="@+id/five_star_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/post_review_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/preview_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_dialog"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="6dp" />

    <EditText
        android:id="@+id/review_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Review Title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_star_button" />

</androidx.constraintlayout.widget.ConstraintLayout>